# nwa-stdlib

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile.test  LICENSE  MANIFEST.in  NOTICE  README.md  README.rst  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: scheduled-build.yml  test-package.yaml
benchmarks/: benchmark_async_cache_with_json.py  benchmark_async_cache_with_orjson.py  benchmark_async_cache_with_pickle.py  shared.py
docs/: debugging.md
nwastdlib/: .cache.py.swp  __init__.py  api.py  api_client.py  asyncio.py  asyncio_cache.py  cache.py  config.py  datetime.py  debugging.py  dict.py  do.py  either.py  ex.py  f.py  file.py  list.py  logging.py  maybe.py  settings.py  shared_state.py  swagger.py  url.py  version.py  vlans.py  worker.py
nwastdlib/graphql/extensions/: deprecation_checker_extension.py  error_handler_extension.py
nwastdlib/middleware/: __init__.py  aiorediscache.py
nwastdlib/oauth/: access_control.py  oauth_client.py  oauth_credentials.py  oauth_filter.py  scopes.py
nwastdlib/test/: test_config.py  test_do.py  utils.py
nwastdlib/test/oauth/: security_definitions.yaml  test_oauth_client.py  test_oauth_credentials.py  test_oauth_filter.py  test_oauth_filter_without_app.py
requirements/: all.txt  base.txt  dev.txt  test.txt
tests/: conftest.py  test_aiorediscachemiddleware.py  test_asyncio.py  test_asyncio_cache.py  test_cache.py  test_config.py  test_do.py  test_ex.py  test_swagger.py  test_url.py  test_vlans.py  utils.py
tests/data/: petstore-simple.yaml
tests/graphql/: test_deprecation_checker_extension.py  test_error_handler_extension.py
tests/oauth/: security_definitions.yaml  test_oauth_client.py  test_oauth_credentials.py  test_oauth_filter.py  test_oauth_filter_without_app.py
