[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "nwastdlib"
dist-name = "nwa-stdlib"
author = "SURF"
author-email = "automation-beheer@surf.nl"
home-page = "https://github.com/workfloworchestrator/nwa-stdlib"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
]
requires = [
    "anyio>=3.7.0",
    "colorama~=0.4.3",
    "pydantic",
    "redis>=4.6, <4.7.0",
    "structlog~=22.1.0",
]
description-file = "README.md"
requires-python = ">=3.9"

[tool.flit.metadata.urls]
Documentation = "https://workfloworchestrator.org/"

[tool.flit.metadata.requires-extra]
test = [
    "anyio",
    "black",
    "fakeredis",
    "mypy",
    "mypy_extensions",
    "pytest",
    "pytest-asyncio",
    "redis",
    "ruff",
]
dev = [
    "bumpversion",
    "pre-commit",
    "types-redis"
]

[tool.black]
line-length = 120
target-version = ["py310"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | src
    | build
  )/
)
'''

[tool.nitpick]
style = "github://workfloworchestrator/nitpick-style@main/nitpick-style-fastapi.toml"

[tool.ruff]
exclude = [
    ".git",
    ".cache",
    ".eggs",
    "__pycache__",
    "dist",
    "src",
    "crypt.py",
    "venv",
    "build",
    ".venv",
]
ignore = [
    "B008",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D202",
    "E501",
    "S101",
    "N806",
    "B904",
    "N802",
    "N801",
    "N818"
]
line-length = 120
select = [
    "B",
    "C",
    "D",
    "E",
    "F",
    "I",
    "N",
    "RET",
    "S",
    "T",
    "W",
]
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "google"
