[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "nwastdlib"
dist-name = "nwa-stdlib"
author = "SURF"
author-email = "automation-beheer@surf.nl"
home-page = "https://github.com/workfloworchestrator/nwa-stdlib"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
]
requires = [
    "anyio>=3.7.0",
    "colorama~=0.4.3",
    "pydantic>=2.4.0",
    "pydantic_settings",
    "strawberry-graphql>=0.246.2",
    "redis>=5.0, <8.0",
    "structlog>=22.1.0",
]
description-file = "README.md"
requires-python = ">=3.11,<3.15"

[tool.flit.metadata.urls]
Documentation = "https://workfloworchestrator.org/"

[tool.flit.metadata.requires-extra]
test = [
    "anyio",
    "apache-license-check",
    "black",
    "fakeredis",
    "fastapi",
    "httpx",
    "mypy",
    "mypy_extensions",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "redis",
    "ruff",
]
dev = [
    "bumpversion",
    "jsonschema",
    "pre-commit",
    "types-redis"
]

[tool.black]
line-length = 120
target-version = ["py311"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | src
    | build
  )/
)
'''


[tool.nitpick]
style = "github://workfloworchestrator/nitpick-style@main/nitpick-style-orchestrator-core.toml"


[tool.ruff]
exclude = [
    ".git",
    ".cache",
    ".eggs",
    "__pycache__",
    "dist",
    "src",
    "venv",
    ".venv",
    "docs",
]
lint.ignore = [
    "C417",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
    "E501",
    "N806",
    "B905",
    "N805",
    "B904",
    "N803",
    "N801",
    "N815",
    "N802",
]
line-length = 120
lint.select = ["B", "C", "D", "E", "F", "I", "N", "RET", "S", "T", "W"]
target-version = "py311"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "B033", "N816", "N802"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = ["pydantic"]
